fix spacing on left for border and all pages

--- a/src/About/About.scss
+++ b/src/About/About.scss
@@ -38,7 +38,7 @@
     align-items: center;
     padding-bottom: 2vh;
     justify-content: space-evenly;
-    width: 85%;
+    width: 90vw;
     margin: 0 auto;
     height: 55vh;
     font-size: 19px;
