--- a/src/Border/Border.scss
+++ b/src/Border/Border.scss
@@ -1,7 +1,10 @@
 @import '../index.scss';
-.border {
-  border: 2px solid $light-green;
-  width: 60%;
-  margin-right: 22.5vw;
-  margin-top: 1vh;
+.border-container {
+  width: 100vw;
+  .border {
+    border: 2px solid $light-green;
+    width: 60%;
+    margin-left: 5vw;
+    margin-top: 1vh;
+  }
 }
