--- a/src/SideBar/SideBar.scss
+++ b/src/SideBar/SideBar.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   width: 60vw;
-  z-index: 2;
+  z-index: 11;
   transform: translateX(-110%);
   transition: transform 0.3s ease-out;
   display: flex;
